Notes for repo setup

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,7 +7,20 @@
 <body>
     
     <h3>Welcome all. Let's <em>play with</em> JavaScript</h3>
+    <hr>
 
+    <h4>Github Account setup</h4>
+    <p>
+        The objective for this exercise is :
+        <ul>
+            <li>Setup github account</li>
+            <li>Create repo</li>
+            <li>Clone repo</li>
+            <li>Quick Setup of project</li>
+            <li>Run and Execute</li>
+            <li>Commit and push to remote</li>
+        </ul>
+    </p>
 
     <script src="app.js"></script>
 
