Notes about data types

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,7 @@
     <title>Learning JavaScript</title>
 </head>
 <body>
-    
+
     <h3>Welcome all. Let's <em>play with</em> JavaScript</h3>
     <hr>
 
@@ -69,6 +69,7 @@
     </p>
 
     <script src="app.js"></script>
+    <script src="primitives.js"></script>
 
 </body>
 </html>
